--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,4 +1,4 @@
 booking.property= Booking Profile Dev
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql =true
-spring.jpa.generate-dll =true
+spring.jpa.generate-ddl =true
