--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,4 +1,5 @@
 booking.property= Booking Profile Dev
+spring.datasource.url= jdbc:mysql://localhost:3306/bookingbd
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql =true
 spring.jpa.generate-ddl =true
