--- a/test-microservice-dev.properties
+++ b/test-microservice-dev.properties
@@ -1,2 +1,2 @@
-test.property= Test Profile Dev
+test.property= Test Profile Dev Updated
 spring.data.mongodb.uri=mongodb://127.0.0.1:27017/productdb
